# marooned

./: .gitignore  CMakeLists.txt  Makefile  README.md  credits.txt  linux_build.sh  windows_build.bat
assets/Models/: grassCard1.glb  grassCard2.glb  grassCard3.glb  grassCard4.glb  squidHead2.glb
assets/shaders/: bloom.fs  ceiling.vs  height_color.fs  skybox.fs  treeShader.fs  tree_instanced.fs  tree_instanced.vs  water.fs
src/: boat.cpp  boat.h  bullet.cpp  bullet.h  camera_system.cpp  camera_system.h  camera_waypoints.cpp  cannonballPile.h  character.h  collisions.cpp  debug_console.cpp  debug_overlay.cpp  debug_overlay.h  dungeonGeneration.cpp  dungeonInstancing.cpp  dungeonInstancing.h  dungeon_props.cpp  dungeon_props.h  game_settings.h  grass.cpp  grass.h  hintManager.cpp  input.cpp  inventory.cpp  kraken.h  level.cpp  main.cpp  main_menu.cpp  main_menu.h  pathfinding.cpp  player.cpp  player.h  render_pipeline.cpp  resourceManager.cpp  resourceManager.h  shaderSetup.cpp  shaderSetup.h  spawn_manager.cpp  spawn_manager.h  terrainChunking.cpp  (+14 more)
